<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Limes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_blog_web_view">BlogWebViewActivity</string>
    <string name="no_items">No items to display!</string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="error_message">There was an error getting data from the blog.</string>
    <string name="action_share">Share</string>
    <string name="share_chooser_title">How do you want to share?</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="register_button">რეგისტრაცია</string>
    <string name="pupil_first_name_hint">მოსწავლის სახელი</string>
    <string name="pupil_last_name_hint">მოსწავლის გვარი</string>
    <string name="parent_first_name_hint">მშობლის სახელი</string>
    <string name="parent_last_name_hint">მშობლის გვარი</string>
    <string name="pupil_mobile_number">მოსწავლის ტელეფონის ნომერი</string>
    <string name="parent_mobile_number">მშობლის ტელეფონის ნომერი</string>
    <string name="home_mobile_number">სახლის ტელეფონის ნომერი</string>
    <string name="group_title">ჯგუფი: </string>
    <string name="time_title">დრო: </string>
    <string name="class_5">კლასი 5</string>
    <string name="class_6">კლასი 6</string>
    <string name="time_1">10:00-11:30</string>
    <string name="time_2">12:30-14:00</string>
    <string name="time_3">14:30-16:00</string>
    <string name="time_4">16:30-18:00</string>
    
    <string-array name="group">
        <item>შაბათი</item>
        <item>კვირა</item>
    </string-array>

</resources>
